# ChangeLog for media-gfx/blender
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.126 2007/12/30 23:40:36 lu_zero Exp $

  10 Jan 2008; Luca Barbato <lu_zero@gentoo.org> blender-2.43.ebuild,
  blender-2.44-r1.ebuild, blender-2.45.ebuild:
  SDL not an optional anymore, thanks to tomciaaa <tomciaaa@gmail.com> for
  reporting it in bug #203746

  17 Nov 2007; Luca Barbato <lu_zero@gentoo.org>
  files/blender-2.44-swscale.patch:
  Fix texture import from ffmpeg, thanks again to Maciej Pawlik <yaq@world.pl>
  for fixing the patch in bug #199448

  17 Nov 2007; Luca Barbato <lu_zero@gentoo.org> blender-2.45.ebuild:
  Fix deps, thanks to Maciej Pawlik <yaq@world.pl> for spotting the issue in
  bug #199440

*blender-2.45 (21 Sep 2007)

  21 Sep 2007; Luca Barbato <lu_zero@gentoo.org> +blender-2.45.ebuild:
  New version, as requested in bug #193317

  19 Sep 2007; Luca Barbato <lu_zero@gentoo.org> blender-2.44-r1.ebuild:
  Update internal ffmpeg lib

*blender-2.44-r1 (19 Sep 2007)

  19 Sep 2007; Luca Barbato <lu_zero@gentoo.org>
  files/blender-2.44-swscale.patch, +blender-2.44-r1.ebuild:
  Patch update and ebuild fixes by Martin Capitanio <gentoo-bug@capitanio.org>

  30 Aug 2007; Bernard Cafarelli <voyageur@gentoo.org> blender-2.44.ebuild:
  Compilation fix for python versions other than 2.4, closes bug #152700

  07 Aug 2007; Luca Barbato <lu_zero@gentoo.org>
  +files/blender-2.44-swscale.patch, blender-2.44.ebuild:
  make blender use swscale

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  blender-2.41-r1.ebuild, blender-2.42.ebuild, blender-2.42a-r1.ebuild,
  blender-2.43.ebuild, blender-2.44.ebuild:
  Drop virtual/x11 references.

  15 Jul 2007; Luca Barbato <lu_zero@gentoo.org> blender-2.44.ebuild:
  Add verse support as requested in bug #173124

  15 Jul 2007; Luca Barbato <lu_zero@gentoo.org>
  +files/blender-2.44-scriptsdir.patch, blender-2.44.ebuild: