@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX blender-2.37-dirs.patch 725 RMD160 3496386616f3066e1a237921f8ecc695a21b142e SHA1 905181caae8193d212a783e4c4c938e87e136752 SHA256 18ed351fd88c1bf952c86425dc769143cda6c5cd25e948ec1e1c0a1b911d44f7
 MD5 bcc3b86202d4c6bb85ef9cef08bfcf9e files/blender-2.37-dirs.patch 725
 RMD160 3496386616f3066e1a237921f8ecc695a21b142e files/blender-2.37-dirs.patch 725
@@ -38,10 +41,10 @@ EBUILD blender-2.42a-r1.ebuild 3432 RMD160 68a58a9f18daea9a6d8aba222e31b52ca3b3b
 MD5 48d26b0a47a6f6a3821a13c49475157a blender-2.42a-r1.ebuild 3432
 RMD160 68a58a9f18daea9a6d8aba222e31b52ca3b3b9e3 blender-2.42a-r1.ebuild 3432
 SHA256 7a071dcb7ecc10852a731978c26bb0d51f74fd7828b240da3dc57c10436a19e3 blender-2.42a-r1.ebuild 3432
-EBUILD blender-2.43.ebuild 3598 RMD160 b0a6d154cd9b525caf7d55869ed6e89d202aeff7 SHA1 d04489a9ccd85ce923797fd11792cf5ac4c02a2e SHA256 c44b0b50b01fa2445989d303e05603df1831d0009dd7430eb66c31e4d63fce25
-MD5 b546582b8f8f0901f8cf58101223e5a9 blender-2.43.ebuild 3598
-RMD160 b0a6d154cd9b525caf7d55869ed6e89d202aeff7 blender-2.43.ebuild 3598
-SHA256 c44b0b50b01fa2445989d303e05603df1831d0009dd7430eb66c31e4d63fce25 blender-2.43.ebuild 3598
+EBUILD blender-2.43.ebuild 3663 RMD160 6e303f498aa93d10825fe6d35aab5eb99a118d25 SHA1 e852e559385f037a6f672bebe66c8a3edcefee49 SHA256 b7853f2125cd00833bb30b17c2131535f2f1dd3eb132df5d7892c25ba5ffc019
+MD5 56e9ddb8491631fb3c7fba72d783a964 blender-2.43.ebuild 3663
+RMD160 6e303f498aa93d10825fe6d35aab5eb99a118d25 blender-2.43.ebuild 3663
+SHA256 b7853f2125cd00833bb30b17c2131535f2f1dd3eb132df5d7892c25ba5ffc019 blender-2.43.ebuild 3663
 EBUILD blender-2.44-r1.ebuild 3401 RMD160 3e2f3ef7f4435306daa3e60c4601280cfb480373 SHA1 56697a2999dd7f6c22552943c33c31ed8830026a SHA256 b6295642b75a254d6f02935b344e7f29a92bb42db6c8d251dd67e37bb2047749
 MD5 b7ee707dd58b44adecb8fe758edfeecb blender-2.44-r1.ebuild 3401
 RMD160 3e2f3ef7f4435306daa3e60c4601280cfb480373 blender-2.44-r1.ebuild 3401
@@ -50,14 +53,14 @@ EBUILD blender-2.44.ebuild 3582 RMD160 297bd48e936e35a7af83a6de57db53f18bb54085 
 MD5 ffb617f48a9674342e64a2b36b0eaf9c blender-2.44.ebuild 3582
 RMD160 297bd48e936e35a7af83a6de57db53f18bb54085 blender-2.44.ebuild 3582
 SHA256 c5722206e6addd42d1fc9d39822068b994aef8099338e799e4753ff663ffdeb8 blender-2.44.ebuild 3582
-EBUILD blender-2.45.ebuild 3368 RMD160 fbf9990fe713f37e0b8f92830d20ea588ee9b441 SHA1 b3385af3e46297300b642979041beca973f977fe SHA256 52c9867bb23ba4cd384b9c54a8766cd03aa587c52b6a008a6120d4130794d706
-MD5 161f51b615eff70171833f9733cc8535 blender-2.45.ebuild 3368
-RMD160 fbf9990fe713f37e0b8f92830d20ea588ee9b441 blender-2.45.ebuild 3368
-SHA256 52c9867bb23ba4cd384b9c54a8766cd03aa587c52b6a008a6120d4130794d706 blender-2.45.ebuild 3368
-MISC ChangeLog 18121 RMD160 fe0c3f5a20fed455b4dc03ca87a478d8d306ea1e SHA1 8ac2fb9b8f27e82e68c2c7049589bff8e12b9016 SHA256 b83899912236e5308c12e92d3ac749ee9b741d1b7b78f49fbbd871a891f2ffc9
-MD5 1f0cf551fad08e22bb7098fbbf1ab4ac ChangeLog 18121
-RMD160 fe0c3f5a20fed455b4dc03ca87a478d8d306ea1e ChangeLog 18121
-SHA256 b83899912236e5308c12e92d3ac749ee9b741d1b7b78f49fbbd871a891f2ffc9 ChangeLog 18121
+EBUILD blender-2.45.ebuild 3429 RMD160 3d7c0801628b5ff21b852081dc126a296670bc3b SHA1 698eebe85f0308f91c82671f545bcd3c56467a63 SHA256 4c128a50d1cd69c5d1395dfbd9ccb97b33e15f65bc1b49aca01594e18a87fe59
+MD5 b91aa24f4378c4d43827873b27164050 blender-2.45.ebuild 3429
+RMD160 3d7c0801628b5ff21b852081dc126a296670bc3b blender-2.45.ebuild 3429
+SHA256 4c128a50d1cd69c5d1395dfbd9ccb97b33e15f65bc1b49aca01594e18a87fe59 blender-2.45.ebuild 3429
+MISC ChangeLog 18406 RMD160 a8191fd535621454b67148ca330cde3cde9e3b97 SHA1 78713318d9a718322d666a15956f335ddbfc153e SHA256 7ef25941d0f25aa01d03ff9c05904c730456000a2865cbd97646e5d7b504c71f
+MD5 c34d343b9507a6578c5313bfc3bfac78 ChangeLog 18406
+RMD160 a8191fd535621454b67148ca330cde3cde9e3b97 ChangeLog 18406
+SHA256 7ef25941d0f25aa01d03ff9c05904c730456000a2865cbd97646e5d7b504c71f ChangeLog 18406
 MISC metadata.xml 492 RMD160 c477917476fbde6356586768276eda1ea31ae3ea SHA1 4a109fbded83a3f6c403ab5f3ec20e7113c1a26c SHA256 0ef00c095e68d12b312f8558b8909b4ae633717cf12932d7a4e479faf7fb9e18
 MD5 cfcd6135fc23767decafee2a97f5ac0a metadata.xml 492
 RMD160 c477917476fbde6356586768276eda1ea31ae3ea metadata.xml 492
@@ -83,3 +86,10 @@ SHA256 9b7ed65449bebb4afd9baf2db6cdb2c795c3cdab5822f70834f21cf464bde2dd files/di
 MD5 dcd1f1ac928023dd992f2fc35dc3515d files/digest-blender-2.45 244
 RMD160 f05c95734e7d6c9475660b3c8625cc1905ea54a8 files/digest-blender-2.45 244
 SHA256 579d9868b6a87720184612f26bcae08140b78437da9433a19234c3cddfc95bb0 files/digest-blender-2.45 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHjAeIkKaRLQcq0GIRAqHWAJ4jk6+Y6Tg8thfdZCaiLHuomV7NEwCfeYpn
+8RhjmnQCcu1+PgNVTetv/YU=
+=hSR7
+-----END PGP SIGNATURE-----
